# lucid-pm

./: .codeos  .gitignore  CLAUDE.md  README.md  install.sh  project-schema.yaml
backlog/: F1-item_status.md  F10-journal.md  F11-project_schema.md  F12-task_model.md  F13-lucid-unified-cli.md  F14-logseq-plugin.md  F15-demo.md  F16-task_extraction.md  F2-logseq_export.md  F3-logseq_sync.md  F4-multi_project.md  F5-priority_view.md  F6-report_export.md  F7-item_links.md  F8-logseq_export_links.md  F9-ontology_suggest.md  R1-pm_structuring-proposed-status.md  R10-project_state-schema_integration.md  R11-ontology_suggest-schema_driven_proposals.md  R12-lucid-dispatcher-coverage.md  R12-lucid-dispatcher-sync-enforcement.md  R13-logseq_plugin_extract.md  R14-logseq_plugin-workflow_guidance.md  R15-logseq_export-dashboard_generation.md  R16-logseq_export-suppress_tbd_owner.md  R2-pm_structuring-folder-ingestion.md  R3-logseq_canonical_format.md  R4-item_links-schema_driven_type_matrix.md  R5-item_status-schema_driven_vocabulary.md  R6-pm_structuring-schema_driven_entity_types.md  R7-priority_view-schema_integration.md  R8-report_export-schema_integration.md  R9-logseq_sync-schema_driven_status_validation.md  README.md
config/: default-schema.yaml
contracts/: F16_task_extraction_contract.md  R13_logseq_plugin_extract_contract.md  demo_contract.md  item_links_contract.md  item_links_schema_integration_contract.md  item_status_contract.md  item_status_schema_driven_vocabulary_contract.md  journal_contract.md  logseq_export_contract.md  logseq_export_links_contract.md  logseq_export_schema_integration_contract.md  logseq_plugin_contract.md  logseq_sync_contract.md  logseq_sync_schema_driven_status_validation_contract.md  lucid_contract.md  lucid_sync_enforcement_contract.md  multi_project_contract.md  ontology_suggest_contract.md  ontology_suggest_schema_driven_proposals_contract.md  pm_structuring_contract.md  pm_structuring_schema_driven_entity_types_contract.md  priority_view_contract.md  priority_view_schema_driven_filters_contract.md  project_schema_contract.md  project_state_contract.md  project_state_schema_integration_contract.md  report_export_contract.md  report_export_schema_driven_vocabulary_contract.md  task_model_contract.md
demo/: WALKTHROUGH.md  project-schema.yaml
demo/events/: runtime_events.jsonl
demo/journal/: 2026-06-05-kickoff-standup-2026-05-29.md
demo/notes/: 01-kickoff-meeting.md  02-risk-and-issue-review.md
docs/: codebase-digest.md  conventions.md  getting_started.md
events/: F16_pm_structuring_wp_attribution_stage6_observation.json  R13_logseq_plugin_extract_stage6_observation.json  demo_schema.md  item_links_schema.md  item_links_schema_integration_schema.md  item_status_schema.md  item_status_schema_driven_vocabulary_schema.md  journal_schema.md  logseq_export_links_schema.md  logseq_export_schema.md  logseq_export_schema_integration_schema.md  logseq_plugin_schema.md  logseq_plugin_stage6_observation.json  logseq_plugin_stage7_reconciliation.md  logseq_sync_schema.md  logseq_sync_schema_driven_status_validation_schema.md  lucid_schema.md  lucid_sync_enforcement_schema.md  multi_project_schema.md  ontology_suggest_schema.md  ontology_suggest_schema_driven_proposals_schema.md  pm_structuring_schema.md  pm_structuring_schema_driven_entity_types_schema.md  priority_view_schema.md  priority_view_schema_driven_filters_schema.md  project_schema_schema.md  project_state_schema.md  project_state_schema_integration_schema.md  report_export_schema.md  report_export_schema_driven_vocabulary_schema.md  runtime_events.jsonl  task_model_schema.md
intents/: F16_task_extraction.md  R13_logseq_plugin_extract.md  R14_logseq_plugin_workflow_guidance.md  R15_logseq_export_dashboard_generation.md  R16_logseq_export_suppress_tbd_owner.md  demo.md  item_links.md  item_links_schema_integration.md  item_status.md  item_status_schema_driven_vocabulary.md  journal.md  logseq_export.md  logseq_export_links.md  logseq_export_refinements.md  logseq_export_schema_integration.md  logseq_plugin.md  logseq_sync.md  logseq_sync_refinements.md  logseq_sync_schema_driven_status_validation.md  lucid.md  lucid_sync_enforcement.md  multi_project.md  ontology_suggest.md  ontology_suggest_schema_driven_proposals.md  pm_structuring.md  pm_structuring_schema_driven_entity_types.md  priority_view.md  priority_view_schema_driven_filters.md  project_schema.md  project_schema_refinements.md  project_state.md  project_state_schema_integration.md  report_export.md  report_export_schema_driven_vocabulary.md  report_export_schema_driven_vocabulary_refinements.md  task_model.md
journal/: 2026-05-28-sprint-planning.md  2026-05-28-standup-notes.txt  2026-05-29-test-entry.md
modules/: Cargo.toml
modules/demo/: Cargo.toml
modules/demo/src/: lib.rs
modules/item_links/: Cargo.toml
modules/item_links/src/: main.rs
modules/item_status/: Cargo.toml
modules/item_status/src/: main.rs
modules/journal/: Cargo.toml
modules/journal/src/: main.rs
modules/logseq_export/: Cargo.toml
modules/logseq_export/src/: main.rs
modules/logseq_sync/: Cargo.toml
modules/logseq_sync/src/: main.rs
modules/lucid/: Cargo.toml
modules/lucid/src/: lib.rs
modules/lucid_core/: Cargo.toml
modules/lucid_core/src/: lib.rs
modules/multi_project/: Cargo.toml
modules/multi_project/src/: main.rs
modules/ontology_suggest/: Cargo.toml
modules/ontology_suggest/src/: main.rs  suggester.rs
modules/pm_structuring/: Cargo.toml
modules/pm_structuring/src/: extractor.rs  main.rs
modules/priority_view/: Cargo.toml
modules/priority_view/src/: main.rs
modules/project_schema/: Cargo.toml
modules/project_schema/src/: lib.rs  main.rs  test_support.rs
modules/project_state/: Cargo.toml
modules/project_state/src/: main.rs
modules/report_export/: Cargo.toml
modules/report_export/src/: main.rs
modules/task_model/: Cargo.toml
modules/task_model/src/: main.rs
openspec/: config.yaml  rag-manifest.json
plugin/: ACCEPTANCE.md  index.html  logseq.json  package-lock.json  package.json
(+109 files in other folders)
