[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# demo is a static content artifact (demo/ directory). This package hosts the
# behavioral and replay test suites per the project's standard test layout.

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[[test]]
name = "demo_behavior"
path = "../../tests/behavioral/demo_behavior.rs"

[[test]]
name = "demo_replay"
path = "../../tests/replay/demo_replay.rs"
