[package]
name = "item_status"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "item_status"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "item_status_behavior"
path = "../../tests/behavioral/item_status_behavior.rs"

[[test]]
name = "item_status_replay"
path = "../../tests/replay/item_status_replay.rs"
