[package]
name = "journal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "journal"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "journal_behavior"
path = "../../tests/behavioral/journal_behavior.rs"

[[test]]
name = "journal_replay"
path = "../../tests/replay/journal_replay.rs"
