[package]
name = "logseq_export"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logseq_export"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
project_schema = { path = "../project_schema" }

[dev-dependencies]
project_schema = { path = "../project_schema", features = ["test-support"] }
tempfile = "3"

[[test]]
name = "logseq_export_behavior"
path = "../../tests/behavioral/logseq_export_behavior.rs"

[[test]]
name = "logseq_export_replay"
path = "../../tests/replay/logseq_export_replay.rs"

[[test]]
name = "logseq_export_links_behavior"
path = "../../tests/behavioral/logseq_export_links_behavior.rs"

[[test]]
name = "logseq_export_links_replay"
path = "../../tests/replay/logseq_export_links_replay.rs"
