[package]
name = "logseq_sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logseq_sync"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
project_schema = { path = "../project_schema" }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "logseq_sync_behavior"
path = "../../tests/behavioral/logseq_sync_behavior.rs"

[[test]]
name = "logseq_sync_replay"
path = "../../tests/replay/logseq_sync_replay.rs"
