[package]
name = "multi_project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "multi_project"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "multi_project_behavior"
path = "../../tests/behavioral/multi_project_behavior.rs"

[[test]]
name = "multi_project_replay"
path = "../../tests/replay/multi_project_replay.rs"
