[package]
name = "ontology_suggest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ontology_suggest"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
project_schema = { path = "../project_schema" }
lucid_core = { path = "../lucid_core" }

[dev-dependencies]
project_schema = { path = "../project_schema", features = ["test-support"] }
tempfile = "3"

[[test]]
name = "ontology_suggest_behavior"
path = "../../tests/behavioral/ontology_suggest_behavior.rs"

[[test]]
name = "ontology_suggest_replay"
path = "../../tests/replay/ontology_suggest_replay.rs"
