[package]
name = "priority_view"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "priority_view"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
project_schema = { path = "../project_schema" }

[dev-dependencies]
project_schema = { path = "../project_schema", features = ["test-support"] }
tempfile = "3"

[[test]]
name = "priority_view_behavior"
path = "../../tests/behavioral/priority_view_behavior.rs"

[[test]]
name = "priority_view_replay"
path = "../../tests/replay/priority_view_replay.rs"
