[package]
name = "project_schema"
version = "0.1.0"
edition = "2021"

[lib]
name = "project_schema"
path = "src/lib.rs"

[[bin]]
name = "project_schema"
path = "src/main.rs"

[features]
test-support = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "project_schema_behavior"
path = "../../tests/behavioral/project_schema_behavior.rs"

[[test]]
name = "project_schema_replay"
path = "../../tests/replay/project_schema_replay.rs"
