[package]
name = "project_state"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "project_state"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
project_schema = { path = "../project_schema" }
lucid_core = { path = "../lucid_core" }

[dev-dependencies]
project_schema = { path = "../project_schema", features = ["test-support"] }
tempfile = "3"

[[test]]
name = "project_state_behavior"
path = "../../tests/behavioral/project_state_behavior.rs"

[[test]]
name = "project_state_replay"
path = "../../tests/replay/project_state_replay.rs"
