[package]
name = "report_export"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "report_export"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
project_schema = { path = "../project_schema" }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "report_export_behavior"
path = "../../tests/behavioral/report_export_behavior.rs"

[[test]]
name = "report_export_replay"
path = "../../tests/replay/report_export_replay.rs"
