[package]
name = "task_model"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "task_model"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
project_schema = { path = "../project_schema" }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "task_model_behavior"
path = "../../tests/behavioral/task_model_behavior.rs"

[[test]]
name = "task_model_replay"
path = "../../tests/replay/task_model_replay.rs"

[[test]]
name = "task_model_runtime_replay"
path = "../../tests/replay/task_model_runtime_replay.rs"
